Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I86bcb14aa95baa917a752c6ea7ca95b703167a1d

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -4180,7 +4180,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"የአሰሳ ሁነታ"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-አዝራር ዳሰሳ"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"መተግበሪያዎችን ለመቀየር በመነሻ አዝራሩ ላይ ወደ ላይ ይጥረጉ። ሁሉንም መተግበሪያዎች ለማየት እንደገና ወደ ላይ ይጥረጉ። ለመመለስ የተመለስ አአዝራሩን መታ ያድርጉ።"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ደህንነት እና ድንገተኛ ሁኔታ"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ደህንነት እና ድንገተኛ አደጋ"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"የነፍስ አድን ድንገተኛ ጥሪ፣ የሕክምና መረጃ፣ ማንቂያዎች"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"የእጅ ውዝዋዜ ዳሰሳ"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"ወደ መነሻ ለመሄድ ከማያ ገፅ ከስር ወደ ላይ በጣት ያንሸራትቱ። መተግበሪያዎችን ለመቀየር ከስር ወደ ላይ በጣት ያንሸራቱ፣ ይያዙ፣ ከዚያም ይልቀቁ። ወደ ኋላ ለመመለስ ከግራ ወይም ቀኝ ጠርዝ በጣት ያንሸራትቱ።"</string>
