--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -2801,8 +2801,8 @@
     <string name="data_usage_app_restrict_dialog_title" msgid="5383874438677899255">"Ograničenje pozadinskih podataka?"</string>
     <string name="data_usage_app_restrict_dialog" msgid="5534272311979978297">"Zbog te značajke aplikacija koja ovisi o pozadinskim podacima može prestati raditi kada su dostupne samo mobilne mreže.\n\nU postavkama možete pronaći prikladnije kontrole prijenosa podataka."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="8599940395497268584">"Ograničavanje pozadinskih podataka moguće je samo ako ste postavili ograničenje mobilnog podatkovnog prometa."</string>
-    <string name="data_usage_auto_sync_on_dialog_title" msgid="2048411447974361181">"Uključiti auto. sinkronizaciju?"</string>
-    <string name="data_usage_auto_sync_off_dialog_title" msgid="1783917145440587470">"Isključiti auto. sinkronizaciju?"</string>
+    <string name="data_usage_auto_sync_on_dialog_title" msgid="2048411447974361181">"Uključiti automatsku sinkronizaciju?"</string>
+    <string name="data_usage_auto_sync_off_dialog_title" msgid="1783917145440587470">"Isključiti automatsku sinkronizaciju?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="6523112583569674837">"Time ćete uštedjeti na podatkovnom prometu i smanjiti potrošnju baterije, ali ćete svaki račun morati ručno sinkronizirati za najnovije informacije. Nećete primati obavijesti o ažuriranjima."</string>
     <string name="data_usage_cycle_editor_title" msgid="2019035830921480941">"Datum poništavanja ciklusa potrošnje"</string>
     <string name="data_usage_cycle_editor_subtitle" msgid="1026234456777365545">"Datum u mjesecu:"</string>
