--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1307,7 +1307,7 @@
     <string name="system_update_settings_list_item_title" msgid="3398346836439366350">"Systemupdates"</string>
     <string name="system_update_settings_list_item_summary" msgid="6703752298349642101"></string>
     <string name="firmware_version" msgid="1606901586501447275">"Android-Version"</string>
-    <string name="security_patch" msgid="4071756145347865382">"Android-Sicherheitsupdate"</string>
+    <string name="security_patch" msgid="4071756145347865382">"Android-Sicher­heitsupdate"</string>
     <string name="model_info" msgid="8997566254717810904">"Modell"</string>
     <string name="hardware_revision" msgid="3454709180861965025">"Hardwareversion"</string>
     <string name="manufactured_year" msgid="3401517138700926475">"Herstellungsjahr"</string>
