--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -556,7 +556,7 @@
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Rovnaké ako zámka obrazovky zariadenia"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Chcete pre súkromný priestor vybrať novú zámku?"</string>
     <string name="private_space_auto_lock_title" msgid="8663409382910601261">"Automaticky uzamykať súkromný priestor"</string>
-    <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"Ak ste zariadenie istý čas nepoužili, môžete si automaticky uzamknúť súkromný priestor"</string>
+    <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"Ak zariadenie istý čas nepoužijete, súkromný priestor sa môže automaticky uzamknúť"</string>
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Vždy, keď sa zariadenie uzamkne"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="1748673030841528649">"Po piatich minútach nečinnosti"</string>
     <string name="private_space_auto_lock_never" msgid="595014527119778873">"Nikdy"</string>
@@ -592,7 +592,7 @@
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Výber účtu Googlu pre priestor"</b>\n"Používanie vyhradeného účtu pomáha zastaviť zobrazovanie synchronizovaných súborov, fotiek a správ mimo vášho priestoru."</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Nastavenie zámky"</b>\n"Uzamknite svoj priestor, aby ho iní ľudia nemohli otvoriť."</string>
     <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Inštalácia aplikácií"</b>\n"Súkromný priestor má vlastný Obchod Play, aby ste si mohli ľahko nainštalovať aplikácie."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplikácie vo vašom súkromnom priestore sa nebudú zobrazovať v sekcii Správca povolení, paneli ochrany súkromia ani iných nastaveniach, keď je tento priestor uzamknutý.\n\nSúkromný priestor si nemôžete preniesť do iného zariadenia. Ak ho chcete používať v inom zariadení, musíte si nastaviť iný súkromný priestor.\n\nK vášmu súkromnému priestoru môže získať prístup ktokoľvek, kto pripojí vaše zariadenie k počítaču alebo v ňom nainštaluje škodlivé aplikácie."</string>
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplikácie vo vašom súkromnom priestore sa nebudú zobrazovať v správe povolení, paneli ochrany súkromia ani iných nastaveniach, keď je súkromný priestor uzamknutý.\n\nSúkromný priestor si nemôžete preniesť do iného zariadenia. Ak ho chcete používať v inom zariadení, musíte si založiť ďalší súkromný priestor.\n\nK vášmu súkromnému priestoru môže získať prístup ktokoľvek, kto pripojí vaše zariadenie k počítaču alebo v ňom nainštaluje škodlivé aplikácie."</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Nastavuje sa súkromný priestor…"</string>
     <string name="private_space_notifications_hidden_title" msgid="2009112565217540581">"Keď je súkromný priestor uzamknutý, upozornenia z aplikácií, ktoré sú v ňom, sú skryté"</string>
     <string name="private_space_explore_settings_title" msgid="1448128245941571654">"Preskúmajte nastavenia súkromného priestoru umožňujúce jeho skrytie alebo nastavenie automatického zamykania"</string>
