Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ib10266f4f4e744e3115e97b717aa6068ad3e6be6

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -3205,7 +3205,7 @@
     <string name="promote_conversation_title" msgid="4731148769888238722">"Dies ist eine Unterhaltung"</string>
     <string name="promote_conversation_summary" msgid="3890724115743515035">"Dem Bereich „Unterhaltungen“ hinzufügen"</string>
     <string name="priority_conversation_count_zero" msgid="3862289535537564713">"Keine vorrangigen Unterhaltungen"</string>
-    <string name="priority_conversation_count" msgid="7291234530844412077">"{count,plural, =1{# vorrangige Unterhaltung}other{# vorrangige Unterhaltungen}}"</string>
+    <string name="priority_conversation_count" msgid="7291234530844412077">"{count,plural, =1{# priorisierte Unterhaltung}other{# priorisierte Unterhaltungen}}"</string>
     <string name="important_conversations" msgid="1233893707189659401">"Vorrangige Unterhaltungen"</string>
     <string name="important_conversations_summary_bubbles" msgid="614327166808117644">"Oben im Bereich „Unterhaltungen“ und als unverankerte Bubbles anzeigen"</string>
     <string name="important_conversations_summary" msgid="3184022761562676418">"Oben im Bereich „Unterhaltungen“ anzeigen"</string>
