--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -50,7 +50,7 @@
     <string name="bluetooth_not_visible_to_other_devices" msgid="6181960579190879601">"अन्य ब्लूटूथ डीव्हाइसवर दृश्यमान नाही"</string>
     <string name="bluetooth_only_visible_to_paired_devices" msgid="3574936359739213455">"फक्त जोडलेल्या डिव्हाइसेसवर दृश्यमान"</string>
     <string name="bluetooth_devices" msgid="1063177983261608277">"ब्लूटूथ डिव्हाइस"</string>
-    <string name="bluetooth_device_name" msgid="1294669733490268384">"डिव्हाइस नाव"</string>
+    <string name="bluetooth_device_name" msgid="1294669733490268384">"डिव्हाइसचे नाव"</string>
     <string name="bluetooth_rename_device" msgid="4219655243836021443">"या डिव्हाइसचे नाव बदला"</string>
     <string name="bluetooth_rename_button" msgid="9162500408570289545">"नाव बदला"</string>
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"डिव्हाइस डिस्‍कनेक्‍ट करायचे का?"</string>
