--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -480,7 +480,7 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"ਇਨਕ੍ਰਿਪਸ਼ਨ, ਕ੍ਰੀਡੈਂਸ਼ੀਅਲ ਅਤੇ ਹੋਰ ਬਹੁਤ ਕੁਝ"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"ਸੁਰੱਖਿਆ, ਹੋਰ ਸੁਰੱਖਿਆ ਸੈਟਿੰਗਾਂ, ਹੋਰ ਸੈਟਿੰਗਾਂ, ਅਡਵਾਂਸ ਸੁਰੱਖਿਆ ਸੈਟਿੰਗਾਂ"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"ਹੋਰ ਪਰਦੇਦਾਰੀ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"ਹੋਰ ਸੁਰੱਖਿਆ ਅਤੇ ਪਰਦੇਦਾਰੀ"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"ਹੋਰ ਸਿਕਿਊਰਟੀ ਅਤੇ ਪਰਦੇਦਾਰੀ"</string>
     <string name="security_header" msgid="961514795852103424">"ਸੁਰੱਖਿਆ"</string>
     <string name="privacy_header" msgid="5526002421324257007">"ਪਰਦੇਦਾਰੀ"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ"</string>
