Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I167a2ec1fe7d85159293889ad39457f59dfca45e

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -927,8 +927,8 @@
     <string name="wifi_hidden_network_warning" msgid="3937433813754746158">"Pokud router nevysílá ID sítě, ale vy se k síti budete chtít v budoucnu připojit, můžete síť nastavit jako skrytou.\n\nToto opatření může představovat bezpečnostní riziko, protože telefon bude pravidelně vysílat signál za účelem nalezení sítě.\n\nPokud tuto síť nastavíte jako skrytou, nastavení routeru tím nezměníte."</string>
     <string name="wifi_signal" msgid="4442182285304271424">"Síla signálu"</string>
     <string name="wifi_status" msgid="5349199188871002778">"Stav"</string>
-    <string name="tx_wifi_speed" msgid="2368986629172050673">"Rychlost odkazu pro přenos"</string>
-    <string name="rx_wifi_speed" msgid="5167966079215111232">"Rychlost odkazu k přijímání"</string>
+    <string name="tx_wifi_speed" msgid="2368986629172050673">"Odchozí rychlost spojení"</string>
+    <string name="rx_wifi_speed" msgid="5167966079215111232">"Příchozí rychlost spojení"</string>
     <string name="wifi_speed" msgid="6562147734565434513">"Rychlost připojení"</string>
     <string name="wifi_frequency" msgid="3120998420184702834">"Frekvence"</string>
     <string name="wifi_ip_address" msgid="8903577251845268209">"IP adresa"</string>
