--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -1707,7 +1707,7 @@
     <string name="forgot_password_text" msgid="2583194470767613163">"Te puede ayudar a restablecer el PIN, el patrón o la contraseña"</string>
     <string name="advanced_settings" msgid="2368905204839169094">"Configuración avanzada"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"Activar más opciones de configuración"</string>
-    <string name="application_info_label" msgid="1015706497694165866">"Información de apps"</string>
+    <string name="application_info_label" msgid="1015706497694165866">"Información de la app"</string>
     <string name="storage_label" msgid="2522307545547515733">"Almacenamiento"</string>
     <string name="auto_launch_label" msgid="4069860409309364872">"Abrir de forma predeterminada"</string>
     <string name="auto_launch_label_generic" msgid="5033137408273064599">"Valores predeterminados"</string>
@@ -3391,7 +3391,7 @@
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"Si activas las burbujas para esta app, también se activarán para el dispositivo.\n\nEsto afecta otras apps o conversaciones que pueden crear burbujas."</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Activar"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Cancelar"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Burbujas activadas: Las conversaciones pueden aparecer como elementos flotantes"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Activadas: Las conversaciones pueden aparecer como elementos flotantes"</string>
     <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Permitir que las apps muestren burbujas"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Algunas conversaciones aparecerán como elementos flotantes encima de otras apps"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Se pueden crear burbujas de todas las conversaciones"</string>
@@ -3479,7 +3479,7 @@
     <string name="manage_notification_access_summary" msgid="2907135226478903997">"Controlar qué apps y dispositivos pueden leer notificaciones"</string>
     <string name="work_profile_notification_access_blocked_summary" msgid="8643809206612366067">"El acceso a las notificaciones del perfil de trabajo está bloqueado"</string>
     <string name="notification_assistant_title" msgid="5889201903272393099">"Notificaciones mejoradas"</string>
-    <string name="notification_assistant_summary" msgid="1957783114840908887">"Recibir acciones sugeridas, respuestas y mucho más"</string>
+    <string name="notification_assistant_summary" msgid="1957783114840908887">"Recibir sugerencias de acciones, respuestas y más"</string>
     <string name="no_notification_assistant" msgid="2533323397091834096">"Ninguna"</string>
     <string name="no_notification_listeners" msgid="2839354157349636000">"Ninguna aplicación instalada solicitó acceso a las notificaciones."</string>
     <string name="notification_access_detail_switch" msgid="46386786409608330">"Permitir acceso a las notificaciones"</string>
@@ -4020,7 +4020,7 @@
     <string name="cellular_data_usage" msgid="5874156338825285334">"Uso de datos móviles"</string>
     <string name="app_cellular_data_usage" msgid="7603292978956033926">"Uso de datos de la app"</string>
     <string name="wifi_data_usage" msgid="6868503699134605707">"Uso de datos Wi‑Fi"</string>
-    <string name="non_carrier_data_usage" msgid="6494603202578414755">"Uso de datos que no corresponde al proveedor"</string>
+    <string name="non_carrier_data_usage" msgid="6494603202578414755">"Uso de datos que no corresponde al operador"</string>
     <string name="ethernet_data_usage" msgid="4552227880905679761">"Uso de datos de Ethernet"</string>
     <string name="wifi" msgid="2932584495223243842">"Wi-Fi"</string>
     <string name="ethernet" msgid="4665162609974492983">"Ethernet"</string>
