--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -555,7 +555,7 @@
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"روش‌های باز کردن قفل"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"یکسان با قفل صفحه دستگاه"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"می‌خواهید قفل جدیدی برای فضای خصوصی انتخاب کنید؟"</string>
-    <string name="private_space_auto_lock_title" msgid="8663409382910601261">"قفل خودکار فضای خصوصی"</string>
+    <string name="private_space_auto_lock_title" msgid="8663409382910601261">"قفل کردن خودکار فضای خصوصی"</string>
     <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"می‌توانید تنظیم کنید که اگر برای مدتی از دستگاهتان استفاده نکردید، فضای خصوصی شما به‌طور خودکار قفل شود"</string>
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"هربار که دستگاه قفل می‌شود"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="1748673030841528649">"پس‌از ۵ دقیقه عدم فعالیت"</string>
