--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -542,7 +542,7 @@
     <string name="work_profile_category_header" msgid="85707750968948517">"Profil kerja"</string>
     <string name="private_space_title" msgid="1752064212078238723">"Ruang privasi"</string>
     <string name="private_space_summary" msgid="2274405892301976238">"Kunci dan sembunyikan aplikasi pribadi"</string>
-    <string name="private_space_description" msgid="4059594203775816136">"Tempatkan aplikasi pribadi di ruang terpisah yang dapat Anda sembunyikan atau kunci"</string>
+    <string name="private_space_description" msgid="4059594203775816136">"Tempatkan aplikasi privasi di ruang terpisah yang dapat Anda sembunyikan atau kunci"</string>
     <string name="private_space_lock_title" msgid="7230836881433350526">"Kunci ruang privasi"</string>
     <string name="private_space_one_lock_summary" msgid="2106513606571219068">"Anda dapat membuka kunci ruang privasi dengan cara yang sama seperti membuka kunci perangkat, atau memilih kunci lain"</string>
     <string name="private_space_screen_lock_title" msgid="8679383894967823163">"Gunakan kunci layar perangkat"</string>
@@ -2193,7 +2193,7 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Lebih singkat"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Lebih lama"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Waktu klik otomatis"</string>
-    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Getaran &amp; sentuhan"</string>
+    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Getaran &amp; haptik"</string>
     <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Kontrol kekuatan getaran untuk penggunaan yang berbeda"</string>
     <string name="accessibility_vibration_settings_state_on" msgid="5566026932372832502">"Aktif"</string>
     <string name="accessibility_vibration_settings_state_off" msgid="7946588741954981703">"Nonaktif"</string>
@@ -3358,7 +3358,7 @@
     <string name="conversation_notifs_category" msgid="2549844862379963273">"Percakapan"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"Kelola"</string>
     <string name="app_notification_field" msgid="3208079070539894909">"Notifikasi aplikasi"</string>
-    <string name="app_notification_field_summary" msgid="5981393613897713471">"Mengontrol notifikasi dari setiap aplikasi"</string>
+    <string name="app_notification_field_summary" msgid="5981393613897713471">"Kontrol notifikasi dari setiap aplikasi"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Umum"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"Notifikasi kerja"</string>
     <string name="profile_section_header_for_advanced_privacy" msgid="8385775428904838579">"Profil kerja"</string>
@@ -3372,7 +3372,7 @@
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"Reset setelan penting yang diubah pengguna dan izinkan asisten notifikasi diprioritaskan"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"Saran tindakan dan balasan"</string>
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"Otomatis menampilkan saran tindakan &amp; balasan"</string>
-    <string name="notification_history_summary" msgid="5434741516307706892">"Menampilkan notifikasi baru-baru ini dan yang ditunda"</string>
+    <string name="notification_history_summary" msgid="5434741516307706892">"Tampilkan notifikasi baru-baru ini dan yang ditunda"</string>
     <string name="notification_history" msgid="8663811361243456201">"Histori notifikasi"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"Gunakan histori notifikasi"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"Histori notifikasi dinonaktifkan"</string>
