--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -540,10 +540,10 @@
     <string name="security_header" msgid="961514795852103424">"ආරක්ෂාව"</string>
     <string name="privacy_header" msgid="5526002421324257007">"පෞද්ගලිකත්වය"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"කාර්යාල පැතිකඩ"</string>
-    <string name="private_space_title" msgid="1752064212078238723">"පුද්ගලික අවකාශය"</string>
+    <string name="private_space_title" msgid="1752064212078238723">"පෞද්ගලික අවකාශය"</string>
     <string name="private_space_summary" msgid="2274405892301976238">"පෞද්ගලික යෙදුම් අගුළු දමා සඟවා තබා ගන්න"</string>
     <string name="private_space_description" msgid="4059594203775816136">"පෞද්ගලික යෙදුම් ඔබට සැඟවීමට හෝ අගුළු දැමීමට හැකි වෙනම අවකාශයක තබා ගන්න"</string>
-    <string name="private_space_lock_title" msgid="7230836881433350526">"පුද්ගලික අවකාශ අගුල"</string>
+    <string name="private_space_lock_title" msgid="7230836881433350526">"පෞද්ගලික අවකාශ අගුල"</string>
     <string name="private_space_one_lock_summary" msgid="2106513606571219068">"ඔබට ඔබේ උපාංගය අගුලු හරින ආකාරයටම ඔබේ පුද්ගලික අවකාශය අගුලු ඇරීමට හෝ වෙනත් අගුලක් තෝරා ගැනීමට හැක"</string>
     <string name="private_space_screen_lock_title" msgid="8679383894967823163">"උපාංග තිර අගුල භාවිතා කරන්න"</string>
     <string name="private_space_biometric_title" msgid="3934339826674553174">"මුහුණ සහ ඇඟිලි සලකුණු අගුළු හැරීම"</string>
