--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -542,7 +542,7 @@
     <string name="work_profile_category_header" msgid="85707750968948517">"பணிக் கணக்கு"</string>
     <string name="private_space_title" msgid="1752064212078238723">"ரகசிய இடம்"</string>
     <string name="private_space_summary" msgid="2274405892301976238">"தனிப்பட்ட ஆப்ஸை லாக் செய்தும் மறைத்தும் வைக்கலாம்"</string>
-    <string name="private_space_description" msgid="4059594203775816136">"தனிப்பட்ட ஆப்ஸை நீங்கள் மறைக்கக்கூடிய அல்லது பூட்டக்கூடிய தனி இடத்தில் வைக்கலாம்"</string>
+    <string name="private_space_description" msgid="4059594203775816136">"தனிப்பட்ட ஆப்ஸை தனியாக ஒரு இடத்தில் வைத்து மறைத்தோ பூட்டியோ வைக்கலாம்"</string>
     <string name="private_space_lock_title" msgid="7230836881433350526">"ரகசிய இடத்திற்கான பூட்டு"</string>
     <string name="private_space_one_lock_summary" msgid="2106513606571219068">"உங்கள் சாதனத்தை அன்லாக் செய்வது போலவே ரகசிய இடத்தையும் அன்லாக் செய்யலாம் அல்லது வேறு பூட்டைத் தேர்வுசெய்யலாம்"</string>
     <string name="private_space_screen_lock_title" msgid="8679383894967823163">"சாதனத் திரைப் பூட்டைப் பயன்படுத்துங்கள்"</string>
@@ -592,7 +592,7 @@
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"உங்களின் ரகசிய இடத்திற்கு Google கணக்கைத் தேர்வுசெய்தல்"</b>\n"இதற்கெனப் பிரத்தியேகக் கணக்கைப் பயன்படுத்துவது ஒத்திசைக்கப்பட்ட ஃபைல்கள், படங்கள், மின்னஞ்சல்கள் ஆகியவை உங்களின் ரகசிய இடத்திற்கு வெளியே காட்டப்படுவதை நிறுத்த உதவும்"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"பூட்டை அமைத்தல்"</b>\n"பிற நபர்கள் உங்களின் ரகசிய இடத்தைத் திறக்காமல் இருக்க அதைப் பூட்டலாம்"</string>
     <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"ஆப்ஸை நிறுவுதல்"</b>\n"உங்களின் ரகசிய இடம் அதற்கெனத் தனி Play Storeரைக் கொண்டுள்ளதால் ஆப்ஸை நீங்கள் எளிதாக நிறுவலாம்."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"உங்கள் தனிப்பட்ட இடம் பூட்டப்பட்டிருக்கும்போது அதிலுள்ள ஆப்ஸ் எதுவும் அனுமதி நிர்வாகம், தனியுரிமை டாஷ்போர்டு மற்றும் பிற அமைப்புகளில் காட்டப்படாது.\n\nஉங்கள் தனிப்பட்ட இடத்தைப் புதிய சாதனத்திற்கு மாற்ற முடியாது. வேறொரு சாதனத்தில் அதைப் பயன்படுத்த விரும்பினால், வேறொரு தனிப்பட்ட இடத்தை அமைக்க வேண்டும்.\n\nஉங்கள் சாதனத்தைக் கம்ப்யூட்டருடன் இணைத்தோ தீங்கிழைக்கும் ஆப்ஸை உங்கள் சாதனத்தில் நிறுவியோ யார் வேண்டுமானாலும் உங்கள் தனிப்பட்ட இடத்தை அணுக முடியும்."</string>
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"உங்கள் இரகசிய இடம் பூட்டப்பட்டிருக்கும்போது அதிலுள்ள ஆப்ஸ் எதுவும் அனுமதி நிர்வாகம், தனியுரிமை டாஷ்போர்டு மற்றும் பிற அமைப்புகளில் காட்டப்படாது.\n\nஉங்கள் இரகசிய இடத்தைப் புதிய சாதனத்திற்கு மாற்ற முடியாது. வேறொரு சாதனத்தில் அதைப் பயன்படுத்த விரும்பினால், வேறொரு இரகசிய இடத்தை அமைக்க வேண்டும்.\n\nஉங்கள் சாதனத்தைக் கம்ப்யூட்டருடன் இணைத்தோ தீங்கிழைக்கும் ஆப்ஸை உங்கள் சாதனத்தில் நிறுவியோ யார் வேண்டுமானாலும் உங்கள் இரகசிய இடத்தை அணுக முடியும்."</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"தனிப்பட்ட இடத்தை அமைக்கிறது…"</string>
     <string name="private_space_notifications_hidden_title" msgid="2009112565217540581">"ரகசிய இடத்திற்கான ஆப்ஸ் பூட்டப்பட்டிருக்கும்போது அதிலிருந்து வரும் அறிவிப்புகள் மறைக்கப்படும்"</string>
     <string name="private_space_explore_settings_title" msgid="1448128245941571654">"ரகசிய இடத்தை மறைக்கவும் தானாகப் பூட்டும் அம்சத்தை அமைக்கவும் ரகசிய இட அமைப்புகளுக்குச் செல்லுங்கள்"</string>
