--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -536,14 +536,14 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"დაშიფვრა, ავტორიზაციის მონაცემები და სხვა"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"უსაფრთხოება, უსაფრთხოების მეტი პარამეტრი, მეტი პარამეტრი, უსაფრთხოების გაფართოებული პარამეტრები"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"კონფიდენციალურობის დამატებითი პარამეტრები"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"მეტი უსაფრთხოება და კონფიდენციალურობა"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"მეტი უსაფრთხოება/ კონფიდენციალურობა"</string>
     <string name="security_header" msgid="961514795852103424">"უსაფრთხოება"</string>
     <string name="privacy_header" msgid="5526002421324257007">"კონფიდენციალურობა"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"სამსახურის პროფილი"</string>
     <string name="private_space_title" msgid="1752064212078238723">"კერძო სივრცე"</string>
     <string name="private_space_summary" msgid="2274405892301976238">"ჩაკეტეთ და დამალეთ პირადი აპები"</string>
     <string name="private_space_description" msgid="4059594203775816136">"შეინახეთ პირადი აპები ცალკე სივრცეში, რომლის დამალვა ან ჩაკეტვა შეგიძლიათ"</string>
-    <string name="private_space_lock_title" msgid="7230836881433350526">"პირადი სივრცის ჩაკეტვა"</string>
+    <string name="private_space_lock_title" msgid="7230836881433350526">"კერძო სივრცის ჩაკეტვა"</string>
     <string name="private_space_one_lock_summary" msgid="2106513606571219068">"განბლოკეთ თქვენი კერძო სივრცე ისე, როგორც თქვენს მოწყობილობას განბლოკავთ, ან დააყენეთ განსხვავებული საკეტი"</string>
     <string name="private_space_screen_lock_title" msgid="8679383894967823163">"გამოიყენეთ მოწყობილობის ეკრანის დაბლოკვა"</string>
     <string name="private_space_biometric_title" msgid="3934339826674553174">"სახით და თითის ანაბეჭდით განბლოკვა"</string>
@@ -592,7 +592,7 @@
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Google ანგარიშის არჩევა თქვენი სივრცისთვის"</b>\n"სპეციალური ანგარიშის გამოყენება სინქრონიზებული ფაილების, ფოტოებისა და ელფოსტის თქვენი სივრცის გარეთ გამოჩენას შეუშლის ხელს"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ჩაკეტვის დაყენება"</b>\n"ჩაკეტეთ თქვენი სივრცე, რათა სხვებმა არ გახსნან"</string>
     <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"აპების ინსტალაცია"</b>\n"თქვენს კერძო სივრცეს თავისი Play Store აქვს, შესაბამისად, აპების ინსტალაცია მარტივად შეგიძლიათ."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"თქვენს პირად სივრცეში არსებული აპები არ გამოჩნდება ნებართვების მენეჯერში, კონფიდენციალურობის საინფორმაციო დაფაში და სხვა პარამეტრებში, როდესაც თქვენი პირადი სივრცე დაბლოკილია.\n\nთქვენი პირადი სივრცის ახალ მოწყობილობაში გადატანა შეუძლებელია. თქვენ უნდა დააყენოთ სხვა პირადი სივრცე, თუ გსურთ მისი სხვა მოწყობილობაზე გამოყენება.\n\nნებისმიერს, ვინც თქვენს მოწყობილობას აკავშირებს კომპიუტერთან ან დააინსტალირებს მავნე აპებს თქვენს მოწყობილობაზე, შეიძლება ჰქონდეს წვდომა თქვენს პირად სივრცეში."</string>
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"თქვენს კერძო სივრცეში არსებული აპები არ გამოჩნდება ნებართვების მენეჯერში, კონფიდენციალურობის საინფორმაციო დაფაში და სხვა პარამეტრებში, როდესაც თქვენი კერძო სივრცე დაბლოკილია.\n\nთქვენი კერძო სივრცის ახალ მოწყობილობაში გადატანა შეუძლებელია. თქვენ უნდა დააყენოთ სხვა კერძო სივრცე, თუ გსურთ მისი სხვა მოწყობილობაზე გამოყენება.\n\nნებისმიერს, ვინც თქვენს მოწყობილობას აკავშირებს კომპიუტერთან ან დააინსტალირებს მავნე აპებს თქვენს მოწყობილობაზე, შეიძლება ჰქონდეს წვდომა თქვენს კერძო სივრცეში."</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"მიმდინარეობს პირადი სივრცის დაყენება…"</string>
     <string name="private_space_notifications_hidden_title" msgid="2009112565217540581">"კერძო სივრცის აპების შეტყობინებები დამალულია ჩაკეტვისას"</string>
     <string name="private_space_explore_settings_title" msgid="1448128245941571654">"გაეცანით კერძო სივრცის პარამეტრებს ავტომატური ჩაკეტვის დასაყენებლად და კერძო სივრცის დასამალად"</string>
