--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -543,7 +543,7 @@
     <string name="private_space_title" msgid="1752064212078238723">"Частное пространство"</string>
     <string name="private_space_summary" msgid="2274405892301976238">"Приложения в личном пространстве скрыты и доступны только вам"</string>
     <string name="private_space_description" msgid="4059594203775816136">"Создайте отдельное пространство для личных приложений, которое можно скрыть или защитить с помощью блокировки."</string>
-    <string name="private_space_lock_title" msgid="7230836881433350526">"Блокировка личного пространства"</string>
+    <string name="private_space_lock_title" msgid="7230836881433350526">"Блокировка частного пространства"</string>
     <string name="private_space_one_lock_summary" msgid="2106513606571219068">"Для личного пространства можно установить тот же способ разблокировки, который используется для экрана, или выбрать другой."</string>
     <string name="private_space_screen_lock_title" msgid="8679383894967823163">"Использовать способ блокировки, как на устройстве"</string>
     <string name="private_space_biometric_title" msgid="3934339826674553174">"Фейсконтроль и разблокировка по отпечатку пальца"</string>
@@ -592,7 +592,7 @@
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Выбор аккаунта Google"</b>\n"Чтобы синхронизированные файлы, фотографии и электронные письма не появлялись вне вашего личного пространства, выберите, какой аккаунт в нем использовать."</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Блокировка"</b>\n"Заблокируйте частное пространство, чтобы другие пользователи не могли его открыть."</string>
     <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Установка приложений"</b>\n"В личном пространстве есть Google Play, поэтому вы можете легко устанавливать приложения."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Приложения, добавленные в частное пространство, не показываются в разделе \"Управление разрешениями\", на панели управления разрешениями и в других настройках, когда доступ к личному пространству заблокирован.\n\nЧастное пространство нельзя перенести на другое устройство. Для этого потребуется создать новое частное пространство.\n\nДоступ к вашему личному пространству может получить человек, который установит на вашем устройстве вредоносные приложения или подключит его к компьютеру."</string>
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Приложения, добавленные в частное пространство, не показываются в разделе \"Управление разрешениями\", на панели управления разрешениями и в других настройках, когда доступ к частному пространству заблокирован.\n\nЧастное пространство нельзя перенести на другое устройство. Для этого потребуется создать новое частное пространство.\n\nДоступ к вашему частному пространству может получить человек, который установит на вашем устройстве вредоносные приложения или подключит его к компьютеру."</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Создание личного пространства…"</string>
     <string name="private_space_notifications_hidden_title" msgid="2009112565217540581">"Когда частное пространство заблокировано, уведомления из добавленных в него приложений скрываются"</string>
     <string name="private_space_explore_settings_title" msgid="1448128245941571654">"Скройте частное пространство и настройте его автоматическую блокировку"</string>
