--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3875,7 +3875,7 @@
     <string name="usb_summary_UVC_power" msgid="226810354412154061">"Webkamera a napájací zdroj"</string>
     <string name="background_check_pref" msgid="5304564658578987535">"Kontrola na pozadí"</string>
     <string name="assist_access_context_title" msgid="5201495523514096201">"Používať text z obrazovky"</string>
-    <string name="assist_access_context_summary" msgid="6951814413185646275">"Povoliť asistenčnej aplikácii prístup k obsahu obrazovky v textovej podobe"</string>
+    <string name="assist_access_context_summary" msgid="6951814413185646275">"Povoliť asistenčnej aplikácii prístup k obsahu obrazovky ako k textu"</string>
     <string name="assist_access_screenshot_title" msgid="4395902231753643633">"Používať snímku obrazovky"</string>
     <string name="assist_access_screenshot_summary" msgid="5276593070956201863">"Povoliť asistenčnej aplikácii prístup k snímke obrazovky"</string>
     <string name="assist_flash_title" msgid="5449512572885550108">"Blikať obrazovkou"</string>
