Fix battery talkback for advanced bt header
Test: tested in phone
Bug: 323790433
Change-Id: I52ed8694af240ae7923d7758144e6db3c590571d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12030,6 +12030,8 @@
     <string name="bluetooth_right_name">Right</string>
     <!-- Title for middle bluetooth device. [CHAR LIMIT=NONE] -->
     <string name="bluetooth_middle_name">Case</string>
+    <!-- Content description for battery icon in bluetooth header. [CHAR LIMIT=NONE] -->
+    <string name="bluetooth_header_battery_content_description">Battery</string>
 
     <!-- Default title for the settings panel [CHAR LIMIT=NONE] -->
     <string name="settings_panel_title">Settings Panel</string>
